@@ -16,6 +16,8 @@ xymon (4.3.28) stable; urgency=medium
      (Reported by Sergey, a_s_y at sama.ru)
    * xymond_alert will no longer exit and be relaunched if started
      while there's no actual alertable condition. (Thanks, Franco G.)
+   * Fix mis-parsing of PCRE regex's in client-local.cfg when char
+     ranges are present (Reported by Erik D. Schminke)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Thu, XX XXX 2016 15:00:00 -0700
 
